--- a/cgHomework/cgHomework/cgHomework.vcxproj.filters
+++ b/cgHomework/cgHomework/cgHomework.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Transformation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ModelViewTester.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="cgHomework.h">
@@ -57,6 +60,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Transformation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ModelViewTester.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
