--- a/cgHomework/SimpleViewer/SimpleViewer.vcxproj
+++ b/cgHomework/SimpleViewer/SimpleViewer.vcxproj
@@ -115,6 +115,7 @@
     <ClCompile Include="glwidget.cpp" />
     <ClCompile Include="logo.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="ObjLoader.cpp" />
     <ClCompile Include="SimpleViewer.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -136,6 +137,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="logo.h" />
+    <ClInclude Include="ObjLoader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
